Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24420

qt creator can not generate cmake variable about platform codegen flags or platform linker flags.

XMLWordPrintable

    • Other
    • 831b93905 (14.0), b66a80004 (14.0)

      tool->option->kits->compilers, add gcc toolchain  and set platform codegen flags and platform linker flags, but after run cmake , qt creator can generate some cmake variable about platform codegen flags or platform linker flags.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cadam Cristian Adam
            yangfan yang fan
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes